# yet-another-applied-llm-benchmark

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GEMINI_CLI.md  LOGGING.md  README.md  TESTS.md  TODO.md  config.json  config.yaml  config.yaml.example  config_loader.py  create_results_html.py  docker_controller.py  evaluator.py  evaluators_go.py  llm.py  llm_cache.py  main.py  pyproject.toml  requirements-extra.txt  requirements.txt  run_a_simple_testcase.ipynb  test_thinking_integration.py  thinking_handler_go.py
go/: Makefile  evaluators.go  evaluators_test.go  go.mod  libevaluators.h  libthinking_handler.h  thinking_handler.go  thinking_handler_test.go
llms/: anthropic_model.py  cohere_model.py  gemini_model.py  groq_model.py  llama_model.py  llamacpp_model.py  mistral_model.py  moonshot_model.py  ollama_model.py  openai_model.py  vertexai_model.py
tests/: baking_help.py  bash_convert_not_overwrite.py  change_filetype.py  data_train_timetable.py  explore_sql_db.py  find_bug_in_paper.py  find_bug_in_paper_improved.py  fix_json.py  fix_tokenizer.py  fix_with_patch.py  fix_with_patch_guided.py  implement_assembly_interpreter.py  implement_assembly_interpreter_by_example.py  latex_mini_caps.py  merge_into_16.py  print_hello_poly.py  print_hello_swift.py  program_in_new_assembly.py  py_image_resize.py  python_chess_game_prefix.py  quicksort_swift.py  unholy_matrix.py  what_is_blockbyorb.py  whisper_merge.py
unittests/: __init__.py  test_assembly_debug.py  test_backoff_retry.py  test_cache.py  test_compiler_runner_filenames.py  test_docker_job.py  (+17 more)
(+6 files in other folders)
